fix jumping testimonials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,3 +594,6 @@ min-height: 200px;
 	margin-top:10px;
 	text-align: center;
 }
+.testimonials-box {
+	height: 510px;
+}
